--- a/autoProjectPages/autoProjects.html
+++ b/autoProjectPages/autoProjects.html
@@ -21,13 +21,13 @@
         <p>
             Quick Navigation
         </p>
-        <a href="./autoProjectPages/01civic/civic.html">2007 Honda Civic Engine Swap</a>
+        <a href="./01civic/civic.html">2007 Honda Civic Engine Swap</a>
         <a href="02ObdReader/ObdReader.html">The OBD Reader Project</a>
         <a href="03Chevy1995/Chevy1995.html">The 1995 Chevrolet Ongoing Project</a>
     </div>
     <div class="cards">
         <div class="project">
-            <a href="./autoProjectPages/01civic/civic.html">
+            <a href="./01civic/civic.html">
                 <img src="./autoProjectImages/civicEngineSwap/02civicDelivery.jpg"
                 alt="The Donor Civic in the Junkyard">
             </a>
