Worked on layouts throughout, added links to new pages, and created CSS and html templates for library page

--- a/programmingpages/progprojects.html
+++ b/programmingpages/progprojects.html
@@ -27,9 +27,6 @@
                     The Odin Project, Automate the Boring Stuff, or any other various
                     adventures I've gone on
                 </p>
-                <button class="sign-up">
-                    <a href="sign-up">Sign up!</a>
-                </button>
             </div>
             <img src="../images/code.png" alt="An example of a Raspberry Pi" class="300pximg">
         </div>
@@ -72,10 +69,17 @@
                 </a>
             </div>
             <div class="project">
-                <a href="../webDevPages/dashboard.html">
+                <a href="./dashboard/dashboard.html">
                     <img class="boxed" src="images/dashboardTemplateImage.png" 
                     alt="A screenshot of the dashboard template">
                     <p>A dashboard template page built using Grid and CSS.<p>
+                </a>
+            </div>
+            <div class="project">
+                <a href="./library/library.html">
+                    <img class="boxed" src="webDevImages/libraryIcon.jpg" 
+                    alt="A Giant book">
+                    <p>A Library to keep track of your books and reading progress<p>
                 </a>
             </div>
         </div>
@@ -87,17 +91,6 @@
             When in doubt, use brute force.
         </p>
         <p>-Ken Thompson</p>
-    </div>
-    <div class="call-to-action">
-        <!---Sign up for... something? by clicking on this link here!-->
-        <div class="actiontext">
-            <h2>Call to action! It's time!</h2>
-            <p>Sign up to receive updates on any projects I do!</p>
-        </div>
-        <button class="sign-up">
-            <a href="sign-up" >Sign up!</a>
-        </button>
-        
     </div>
     <footer>
         <p>Copyright Seth 2021</p>
