--- a/programmingpages/dashboard/dashboard.html
+++ b/programmingpages/dashboard/dashboard.html
@@ -21,17 +21,17 @@
         </div>
     -->
         <div class="userLinks">
-            <a href=""><img src="webDevImages/home-account.svg" alt="home">Home</a>
-
-            <a href=""><img src="./webDevImages/face-woman-profile.svg" alt="profile">
+            <a href="../../index.html"><img src="../webDevImages/home-account.svg" alt="home">
+                Home</a>
+            <a href=""><img src="../webDevImages/face-woman-profile.svg" alt="profile">
                 Profile</a>
-            <a href=""><img src="./webDevImages/message-settings.svg" alt="messages">
+            <a href=""><img src="../webDevImages/message-settings.svg" alt="messages">
                 Messages</a>
-            <a href=""><img src="./webDevImages/history.svg" alt="history">
+            <a href=""><img src="../webDevImages/history.svg" alt="history">
                 History</a>
-            <a href=""><img src="./webDevImages/file-tree.svg" alt="tasks">
+            <a href=""><img src="../webDevImages/file-tree.svg" alt="tasks">
                 Tasks</a>
-            <a href=""><img src="./webDevImages/google-circles-communities.svg" alt="Communities">
+            <a href=""><img src="../webDevImages/google-circles-communities.svg" alt="Communities">
                 Communities</a>
         </div>
         <!--
@@ -42,12 +42,15 @@
         </div>
     -->
         <div class="infoLinks">
-            <a href="">            <img src="./webDevImages/cog-outline.svg" alt="settings">
+            <a href=""><img src="../webDevImages/cog-outline.svg" alt="settings">
                 Settings</a>
-            <a href="">            <img src="./webDevImages/message-question.svg" alt="support">
+            <a href=""><img src="../webDevImages/message-question.svg" alt="support">
                 Support</a>
-            <a href="">            <img src="./webDevImages/shield-account.svg" alt="privacy">
+            <a href=""><img src="../webDevImages/shield-account.svg" alt="privacy">
                 Privacy</a>
+            <a href="../progprojects.html"><img src="../webDevImages/shield-account.svg"
+                alt="programming page">Programming Page</a>
+    
         </div>
     </nav>
     <header>
