Started ticTacToe project page

--- a/programmingpages/progprojects.html
+++ b/programmingpages/progprojects.html
@@ -82,6 +82,16 @@
                     <p>A Library to keep track of your books and reading progress<p>
                 </a>
             </div>
+            <div class="project">
+                <a href="./ticTacToe/ticTacToe.html">
+                    <img class="boxed" src="" 
+                    alt="Tic Tac Toe">
+                    <p>
+                        A Tic-Tac-Toe game to reinforce the use of the Module 
+                        pattern!
+                    <p>
+                </a>
+            </div>
         </div>
     </div>
     <div class="quote">
