Updated about the Civic, and the OBD reader!

--- a/autoProjectPages/01civic/civic.html
+++ b/autoProjectPages/01civic/civic.html
@@ -144,6 +144,9 @@
                 side of the engine, so my Dad fabricated a secondary engine support.
             </p>
             <img src="../autoProjectImages/civicEngineSwap/19blownEngineOut.jpg" alt="">
+            <iframe width="420" height="315"
+            src="https://youtube.com/shorts/K-CxZdj4Awc?feature=share">
+            </iframe> 
         </div>
         <div id="swappingComponents">
             <h3>Then the swapping begins</h3>
@@ -154,6 +157,67 @@
             </p>
             <p>
                 !!!!!Insert video here of knock knock, looking at rod bearing assembly
+            </p>
+            <p>
+                Unfortunately, due to rain interrupting nearly every day of work, 
+                I was unable to get a good number of images while I was swapping 
+                over components. One thing I did notice is that the donor engine 
+                had significantly less carbon buildup in the intake passages, 
+                potentially indicating a lower-mileage engine from the junkyard 
+                compared to the 170,000 mile engine the Civic originally had.
+            </p>
+            <img src="../autoProjectImages/civicEngineSwap/21inspectingCamCover.jpg"
+            alt="Inspecting the cam cap">
+            <img src="../autoProjectImages/civicEngineSwap/22inspectingBell.jpg"
+            alt="Inspecting the bell housing attachment point">
+            <img src="../autoProjectImages/civicEngineSwap/23inspectingSensors.jpg"
+            alt="Inspecting the sensors on the front of the engine">
+            <p>
+                Then, once a majority of components were swapped, the oil pan was 
+                on, and any sealant applied that needed to be, we mated the 
+                trans and the engine for installation.
+            </p>
+            <img src="../autoProjectImages/civicEngineSwap/23-5engineTransMated.jpg"
+            alt="Engine and Trans mated together">
+        </div>
+        <div id="installingEngine">
+            <h3>The Engine and Trans is In!</h3>
+            <p>
+                Unfortunately the installation of the engine was all hands on 
+                deck, and we weren't able to capture any images of the actual 
+                engine and transmission installation, but here it is!
+            </p>
+            <img src="../autoProjectImages/civicEngineSwap/24partsComingIn.jpg"
+            alt="Engine and transmission in the engine bay!">
+            <p>
+                I ran the engine for all of 10 seconds to ensure I didn't hear 
+                any awful noises - But with the catalytic converter not installed, 
+                the engine was quite loud and would mask many less noticeable 
+                noises. It certainly sounded better than the old engine!
+            </p>
+            <img src="../autoProjectImages/civicEngineSwap/25moreComplete.jpg"
+            alt="More parts in engine bay">
+            <p>
+                Here you can see many of the accessories have been installed, 
+                including the alternator, catalytic converter, battery tray, 
+                air intake, and more. 
+            </p>
+            <img src="../autoProjectImages/civicEngineSwap/26radIn.jpg"
+            alt="Radiator installed">
+            <p>
+                Then in goes the radiator, after inspecting to ensure that nothing 
+                crawled in while it was out... Here is where I double checked that 
+                any bolts and nuts were properly tightened and secured, as well 
+                as any hoses for the cooling system, vacuum, and EGR systems.
+            </p>
+            <img src="../autoProjectImages/civicEngineSwap/27radBraceIn.jpg"
+            alt="Installation of the radiator support">
+            <p>
+                Here is after I installed the radiator support. Not pictured is 
+                all of the brackets in the rear of the engine secured, installation 
+                of the power steering pump, and passenger CV axle. Since there 
+                will be little risk from here on out, I was able to remove my 
+                cardboard protection of the A/C condensor.
             </p>
         </div>
         
