--- a/autoProjectPages/autoProjects.html
+++ b/autoProjectPages/autoProjects.html
@@ -22,31 +22,33 @@
             Quick Navigation
         </p>
         <a href="./01civic/civic.html">2007 Honda Civic Engine Swap</a>
-        <a href="02ObdReader/ObdReader.html">The OBD Reader Project</a>
-        <a href="03Chevy1995/Chevy1995.html">The 1995 Chevrolet Ongoing Project</a>
+        <a href="./02obdReader/obdReader.html">The OBD Reader Project</a>
+        <a href="./03Chevy1995/Chevy1995.html">The 1995 Chevrolet Ongoing Project</a>
     </div>
     <div class="cards">
         <div class="project">
             <a href="./01civic/civic.html">
                 <img src="./autoProjectImages/civicEngineSwap/02civicDelivery.jpg"
                 alt="The Donor Civic in the Junkyard">
-            </a>
             <p>
                 I happened across a Honda Civic that had been run low on oil - 
                 Till the engine just about seized up. This is the tale of 
                 me swapping the engine out with a junkyard donor engine.
             </p>
+        </a>
         </div>
         <div class="project">
-            <img src="../images/code.png" alt="An image of JavaScript">
+            <a href="./02obdReader/obdReader.html">
+                <img src="../images/code.png" alt="An image of JavaScript">
             <!--replace the above image with a more specific photo! take one!-->
-            <p>
-                Part of owning an old truck - And otherwise a family fleet of 
-                vehicles - is knowing what this little <sup>yellow</sup> light 
-                <sup>of mine</sup> is trying to tell me. This is all about my
-                endeavors in creating a more-or-less DIY scan-tool for OBD1 and
-                OBD2 vehicles.
-            </p>
+                <p>
+                    Part of owning an old truck - And otherwise a family fleet of 
+                    vehicles - is knowing what this little <sup>yellow</sup> light 
+                    <sup>of mine</sup> is trying to tell me. This is all about my
+                    endeavors in creating a more-or-less DIY scan-tool for OBD1 and
+                    OBD2 vehicles.
+                </p>
+            </a>
         </div>
         <div class="project">
             <img src="../images/truckdash.jpg" alt="An image of a gauge cluster">
