Started fresh for tic-tac-toe JS file, display operational

--- a/programmingpages/progprojects.html
+++ b/programmingpages/progprojects.html
@@ -84,7 +84,7 @@
             </div>
             <div class="project">
                 <a href="./ticTacToe/ticTacToe.html">
-                    <img class="boxed" src="" 
+                    <img class="boxed" src="images/tictactoe.jpg" 
                     alt="Tic Tac Toe">
                     <p>
                         A Tic-Tac-Toe game to reinforce the use of the Module 
