--- a/programmingpages/ticTacToe/ticTacToe.html
+++ b/programmingpages/ticTacToe/ticTacToe.html
@@ -31,22 +31,24 @@
             <a href="../rps/rps.html">Rock Paper Scissors</a>
         </div>
     <div id="gameWindow">
-        <div>
+        <div id="turnDisplay">
             <h2>Turn: Player 
                 <span id="turn"></span>
             </h2>
         </div>
+        <div id="player1score">Player1ScorePlaceholder</div>
         <div id="gameBoard">
-            <span id="0"></span>
-            <span id="1"></span>
-            <span id="2"></span>
-            <span id="3"></span>
-            <span id="4"></span>
-            <span id="5"></span>
-            <span id="6"></span>
-            <span id="7"></span>
-            <span id="8"></span>
+            <button class="playbox" id="0"></button>
+            <button class="playbox" id="1"></button>
+            <button class="playbox" id="2"></button>
+            <button class="playbox" id="3"></button>
+            <button class="playbox" id="4"></button>
+            <button class="playbox" id="5"></button>
+            <button class="playbox" id="6"></button>
+            <button class="playbox" id="7"></button>
+            <button class="playbox" id="8"></button>
         </div>
+        <div id="player2score">Player2ScorePlaceholder</div>
     </div>
     <footer>
         <p>Copyright Seth 2021-2022</p>
