--- a/programmingpages/ticTacToe/ticTacToe.html
+++ b/programmingpages/ticTacToe/ticTacToe.html
@@ -35,8 +35,9 @@
             <h2>Turn: Player 
                 <span id="turn"></span>
             </h2>
+            <button id="resetButton">Reset Game</button>
         </div>
-        <div id="player1score">Player1ScorePlaceholder</div>
+        <p class="score" id="player1score">Player 1 Score:</p>
         <div id="gameBoard">
             <button class="playbox" id="0"></button>
             <button class="playbox" id="1"></button>
@@ -48,7 +49,7 @@
             <button class="playbox" id="7"></button>
             <button class="playbox" id="8"></button>
         </div>
-        <div id="player2score">Player2ScorePlaceholder</div>
+        <p class="score" id="player2score">Player 2 Score:</p>
     </div>
     <footer>
         <p>Copyright Seth 2021-2022</p>
