--- a/programmingpages/progprojects.html
+++ b/programmingpages/progprojects.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Programming Projects!</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="introduction">
         <header>
@@ -63,33 +65,39 @@
             </div>
             <div class="project">
                 <a href="etchasketch/etchasketch.html">
-                    <img class="boxed" src="images/etchAsketch.png" 
-                    alt="A DIY Etch-A-Sketch">
+                    <img class="boxed" src="images/etchAsketch.png" alt="A DIY Etch-A-Sketch">
                     <p>A DIY Etch-A-Sketch <sup>in progress</sup> using Javascript</p>
                 </a>
             </div>
             <div class="project">
                 <a href="./dashboard/dashboard.html">
-                    <img class="boxed" src="images/dashboardTemplateImage.png" 
-                    alt="A screenshot of the dashboard template">
+                    <img class="boxed" src="images/dashboardTemplateImage.png"
+                        alt="A screenshot of the dashboard template">
                     <p>A dashboard template page built using Grid and CSS.<p>
                 </a>
             </div>
             <div class="project">
                 <a href="./library/library.html">
-                    <img class="boxed" src="webDevImages/libraryIcon.jpg" 
-                    alt="A Giant book">
+                    <img class="boxed" src="webDevImages/libraryIcon.jpg" alt="A Giant book">
                     <p>A Library to keep track of your books and reading progress<p>
                 </a>
             </div>
             <div class="project">
                 <a href="./ticTacToe/ticTacToe.html">
-                    <img class="boxed" src="images/tictactoe.jpg" 
-                    alt="Tic Tac Toe">
+                    <img class="boxed" src="images/tictactoe.jpg" alt="Tic Tac Toe">
                     <p>
-                        A Tic-Tac-Toe game to reinforce the use of the Module 
+                        A Tic-Tac-Toe game to reinforce the use of the Module
                         pattern!
+                        <p>
+                </a>
+            </div>
+            <div class="project">
+                <a href="restaurant/dist/index.html">
+                    <img class="boxed" src="images/hotdog.jpg" alt="Hotdog">
                     <p>
+                        An interactive restaurant page built using webpack, almost
+                        entirely written in Javascript
+                    </p>
                 </a>
             </div>
         </div>
@@ -107,4 +115,5 @@
         <p>Unless its Copyright The Odin Project 2021</p>
     </footer>
 </body>
+
 </html>
