Updated more broken links, added better description to the 'Restaurant' page

--- a/autoProjectPages/01civic/civic.html
+++ b/autoProjectPages/01civic/civic.html
@@ -15,6 +15,7 @@
         <!---insert stuff here man-->
         <div class="rightLinks">
             <a href="../../index.html">Home</a>
+            <a href="../autoProjects.html">Auto Projects</a>
             <a href="https://www.theodinproject.com">The Odin Project</a>
             <a href="https://github.com">GitHub</a>
         </div>
