--- a/programmingpages/rps/rps.html
+++ b/programmingpages/rps/rps.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors!</title>
     <script type="text/javascript" src="rps.js" defer></script>
-    
+
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="introduction">
         <header>
-            <img src="" alt="Insert my personal logo here">
+            <img src="../../images/logo.png" style="max-width: 10vw; max-height: 10vw;" alt="My personal logo">
             <div class="right-links">
                 <!---insert stuff here man-->
                 <a href="../../index.html">Home</a>
                 <a href="../progprojects.html">Programming Projects</a>
                 <a href="https://www.theodinproject.com">The Odin Project</a>
                 <a href="https://github.com">GitHub</a>
-            
+
             </div>
         </header>
     </div>
@@ -30,9 +32,9 @@
     -->
     <!-- 20220113 Building UI!-->
     <h1 class="title">Rock Paper Scissors!</h1>
-        <h3>Last Round's Result</h3>
-            <p id="lastRound"></p>
-            <h1 id="winMessage"></h1>
+    <h3>Last Round's Result</h3>
+    <p id="lastRound"></p>
+    <h1 id="winMessage"></h1>
     <div class="game">
         <div class="scoreboardPlayer" id="player">
             <h3>You</h3>
@@ -49,11 +51,8 @@
         </div>
     </div>
     <div class="theme-music">
-        <iframe width="560" height="315" 
-        src="https://www.youtube.com/embed/BzbxacRr5Gk" 
-        title="Youtube video player" 
-        frameborder="0" 
-        allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/BzbxacRr5Gk" title="Youtube video player"
+            frameborder="0" allowfullscreen></iframe>
     </div>
 
 </body>
@@ -62,4 +61,5 @@
     <p>Copyright Seth 2021</p>
     <p>Unless its Copyright The Odin Project 2021</p>
 </footer>
+
 </html>
