--- a/programmingpages/ticTacToe/ticTacToe.html
+++ b/programmingpages/ticTacToe/ticTacToe.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,13 +10,14 @@
     <script type="text/javascript" src="./ticTacToe.js" defer></script>
     <title>Page Template</title>
 </head>
+
 <body>
     <header>
         <img src="../../images/logo.png" alt="My personal logo here">
-            <!---insert stuff here -->
+        <!---insert stuff here -->
         <div class="rightLinks">
             <a href="/index.html">Home</a>
-            <a href="../programmingpages/index.html">Programming</a>
+            <a href="../progprojects.html">Programming</a>
             <a href="https://www.theodinproject.com">The Odin Project</a>
             <a href="https://github.com">GitHub</a>
         </div>
@@ -24,15 +26,16 @@
         <p>
             Nav Bar / Tool bar
         </p>
-            <a href="../calculator/calc.html">Calculator</a>
-            <a href="../dashboard/dashboard.html">Example Dashboard</a>
-            <a href="../etchasketch/etchasketch.html">Etch A Sketh</a>
-            <a href="../library/library.html">A Library App</a>
-            <a href="../rps/rps.html">Rock Paper Scissors</a>
-        </div>
+        <a href="../calculator/calc.html">Calculator</a>
+        <a href="../dashboard/dashboard.html">Example Dashboard</a>
+        <a href="../etchasketch/etchasketch.html">Etch A Sketch</a>
+        <a href="../library/library.html">A Library App</a>
+        <a href="../rps/rps.html">Rock Paper Scissors</a>
+        <a href="../restaurant/dist/index.html">Restaurant</a>
+    </div>
     <div id="gameWindow">
         <div id="turnDisplay">
-            <h2>Turn: Player 
+            <h2>Turn: Player
                 <span id="turn"></span>
             </h2>
             <button id="resetButton">Reset Game</button>
@@ -56,4 +59,5 @@
         <p>Unless its Copyright The Odin Project 2021-2022</p>
     </footer>
 </body>
+
 </html>
