--- a/programmingpages/progprojects.html
+++ b/programmingpages/progprojects.html
@@ -100,6 +100,13 @@
                     </p>
                 </a>
             </div>
+            <div class="project">
+                <a href="./todoList/dist/index.html">
+                    <img class="boxed" src="" alt="ToDo List">
+                    <p>A ToDo List built in (Nearly) Pure Javascript, using local
+                        storage and WebPack<p>
+                </a>
+            </div>
         </div>
     </div>
     <div class="quote">
