--- a/autoProjectPages/01civic/civic.html
+++ b/autoProjectPages/01civic/civic.html
@@ -8,10 +8,18 @@
     <link rel="stylesheet" href="../subPages.css">
     <title>Engine Swap in a 2007 Civic</title>
 </head>
+<!-- Need to create TWO VERSIONS of this page - The main page when landing on it should
+present these links with the following options:
+One version is text only, done in paragraph format. 
+
+The other, a picture-based
+story format, where each picture is the main, centered content, and the next
+"card" is navigated to with an arrow to either side. Much like navigating through
+webcomics like XKCD or other picture-based 'stories' -->
 
 <body>
     <header>
-        <img src="../../images/logo.png" alt="My personal logo here">
+        <img id="logo" src="../../images/logo.png" alt="My personal logo here">
         <!---insert stuff here man-->
         <div class="rightLinks">
             <a href="../../index.html">Home</a>
@@ -30,9 +38,10 @@
         <a href="03Chevy1995/Chevy1995.html">The 1995 Chevrolet Ongoing Project</a>
     </div>
     <div class="content">
-        <h2>Knock knock, who's there</h2>
+        <div class="heading">
+            <h2>Knock Knock, Who's There</h2>
+        </div>
         <div id="intro">
-            <h3>Delivery</h3>
             <p>
                 A few months ago, my friend asked me to get this civic off of his
                 property. He had been driving it some while back when it lost power
@@ -42,8 +51,10 @@
             <img src="../autoProjectImages/civicEngineSwap/01civicDelivery.jpg" alt="Delivery of the Civic">
             <img src="../autoProjectImages/civicEngineSwap/02civicDelivery.jpg" alt="Civic off the trailer">
         </div>
-        <div id="runTest">
+        <div class="heading">
             <h3>He said it wouldn't start</h3>
+        </div>
+        <div id="runTest">
             <p>
                 So I hooked up 2 truck-sized batteries in parallel with some huge
                 cables... And it started!
@@ -52,9 +63,6 @@
                 alt="An image of the gauge cluster, running">
             <p>!!!!!Insert video here!</p>
             <p>!!!!!Insert video2 here!</p>
-            <p>
-                Yeah, that sound, it ain't good. Knock knock, who's there?
-            </p>
         </div>
         <div id="theDonor">
             <h3>So, off to the pick'n'pull</h3>
@@ -62,12 +70,16 @@
                 I kept an eye on the local pick'n'pull's inventory for a Civic to
                 show up with an R18 engine. Finally, one showed up.
             </p>
+        </div>
+        <div class="the_choice">
             <img src="../autoProjectImages/civicEngineSwap/07theChoice.jpg" alt="The donor Civic">
             <p>
                 With my dad's help, we started removing the extra components we
                 didn't need, and disconnecting any electrical connections and hoses
                 that were holding the engine in.
             </p>
+        </div>
+        <div class="ready_to_lift">
             <img src="../autoProjectImages/civicEngineSwap/08readyToLift.jpg"
                 alt="Everything disconnected, ready to lift">
             <p>
@@ -75,11 +87,15 @@
                 much of it disconnected and ready to pull. But it had to be done.
                 Then, we lifted.
             </p>
+        </div>
+        <div class="on_the_way_out">
             <img src="../autoProjectImages/civicEngineSwap/09onTheWayOut.jpg" alt="Pulling out the engine">
             <p>
                 We had some trouble getting the torque converter to stay in the
                 transmission, but eventually got it separated and the engine out.
             </p>
+        </div>
+        <div class="engine_pulled">
             <img src="../autoProjectImages/civicEngineSwap/10enginePulled.jpg" alt="Engine on the cart">
             <p>
                 And checked out of the pick'n'pull! We actually were able to get
@@ -87,12 +103,16 @@
                 to pull that off.
             </p>
             <img src="../autoProjectImages/civicEngineSwap/11checkout.jpg" alt="Checking out at the pick'n'pull">
+        </div>
+        <div class="engine_pulled">
             <p>
                 And finally we were on the way home, engine secured in the truck
                 bed.
             </p>
             <img src="../autoProjectImages/civicEngineSwap/12headingHome.jpg" alt="Engine in truck bed">
+
         </div>
+
         <div id="theVictim">
             <h3>Pulling the victim's engine</h3>
             <p>
@@ -103,6 +123,8 @@
             </p>
             <img src="../autoProjectImages/civicEngineSwap/13restingPlace.jpg"
                 alt="The Civic resting on a pallet infront of the recipient">
+        </div>
+        <div class="wrapped">
             <p>
                 I knew it would take some time, so I set up a pallet to keep the
                 donor engine high and dry while I was working on preparing the
@@ -110,106 +132,113 @@
             </p>
             <img src="../autoProjectImages/civicEngineSwap/14weatherWrap.jpg"
                 alt="Donor engine, wrapped to protect it from the weather">
+        </div>
+        <div class="clear_way">
             <p>
                 I wrapped up the donor engine with some plastic to protect it from
                 any potential rain. I'm taking my time, and don't want to rush or
                 burn out.
             </p>
             <img src="../autoProjectImages/civicEngineSwap/15clearingTheWay.jpg" alt="An in-progress picture of clearing the accessories off the
-            blown engine">
+                blown engine">
+        </div>
+        <div class="ac_system">
             <p>
                 I didn't want to have to evacuate or refill the A/C system or power
                 steering <sup>(not pictured)</sup>, so I made sure they were out of
                 the way for pulling the engine.
             </p>
+        </div>
+        <div class="engine_stand">
             <img src="../autoProjectImages/civicEngineSwap/17engineStand.jpg"
                 alt="Getting the donor engine on an engine stand">
             <p>
                 Once I was close to being able to pull the blown engine, I set up the
                 donor engine on an engine stand so that I could swap over accessories.
             </p>
-            <img src="../autoProjectImages/civicEngineSwap/18blownEngineOut.jpg" alt="Blown engine, removed from Civic">
-            <p>
-                Aaaaand it's out! We struggled some, but we were able to pull both
-                the engine and transmission together. This will be useful, as I have
-                to swap over some components since the donor is from an automatic,
-                and the recipient is a manual. Also note the board assisting in holding
-                up the donor engine. I wasn't comfortable with only 4 bolts on one
-                side of the engine, so my Dad fabricated a secondary engine support.
-            </p>
-            <img src="../autoProjectImages/civicEngineSwap/19blownEngineOut.jpg" alt="">
-            <iframe width="420" height="315" src="https://youtube.com/shorts/K-CxZdj4Awc?feature=share">
-            </iframe>
         </div>
-        <div id="swappingComponents">
-            <h3>Then the swapping begins</h3>
-            <p>
-                I minimized the accessories on the donor engine when we pulled it,
-                and some of the accessories on the recipient are in better condition.
-                So, begins the process of swapping over components.
-            </p>
-            <p>
-                !!!!!Insert video here of knock knock, looking at rod bearing assembly
-            </p>
-            <p>
-                Unfortunately, due to rain interrupting nearly every day of work,
-                I was unable to get a good number of images while I was swapping
-                over components. One thing I did notice is that the donor engine
-                had significantly less carbon buildup in the intake passages,
-                potentially indicating a lower-mileage engine from the junkyard
-                compared to the 170,000 mile engine the Civic originally had.
-            </p>
-            <img src="../autoProjectImages/civicEngineSwap/21inspectingCamCover.jpg" alt="Inspecting the cam cap">
-            <img src="../autoProjectImages/civicEngineSwap/22inspectingBell.jpg"
-                alt="Inspecting the bell housing attachment point">
-            <img src="../autoProjectImages/civicEngineSwap/23inspectingSensors.jpg"
-                alt="Inspecting the sensors on the front of the engine">
-            <p>
-                Then, once a majority of components were swapped, the oil pan was
-                on, and any sealant applied that needed to be, we mated the
-                trans and the engine for installation.
-            </p>
-            <img src="../autoProjectImages/civicEngineSwap/23-5engineTransMated.jpg"
-                alt="Engine and Trans mated together">
-        </div>
-        <div id="installingEngine">
-            <h3>The Engine and Trans is In!</h3>
-            <p>
-                Unfortunately the installation of the engine was all hands on
-                deck, and we weren't able to capture any images of the actual
-                engine and transmission installation, but here it is!
-            </p>
-            <img src="../autoProjectImages/civicEngineSwap/24partsComingIn.jpg"
-                alt="Engine and transmission in the engine bay!">
-            <p>
-                I ran the engine for all of 10 seconds to ensure I didn't hear
-                any awful noises - But with the catalytic converter not installed,
-                the engine was quite loud and would mask many less noticeable
-                noises. It certainly sounded better than the old engine!
-            </p>
-            <img src="../autoProjectImages/civicEngineSwap/25moreComplete.jpg" alt="More parts in engine bay">
-            <p>
-                Here you can see many of the accessories have been installed,
-                including the alternator, catalytic converter, battery tray,
-                air intake, and more.
-            </p>
-            <img src="../autoProjectImages/civicEngineSwap/26radIn.jpg" alt="Radiator installed">
-            <p>
-                Then in goes the radiator, after inspecting to ensure that nothing
-                crawled in while it was out... Here is where I double checked that
-                any bolts and nuts were properly tightened and secured, as well
-                as any hoses for the cooling system, vacuum, and EGR systems.
-            </p>
-            <img src="../autoProjectImages/civicEngineSwap/27radBraceIn.jpg" alt="Installation of the radiator support">
-            <p>
-                Here is after I installed the radiator support. Not pictured is
-                all of the brackets in the rear of the engine secured, installation
-                of the power steering pump, and passenger CV axle. Since there
-                will be little risk from here on out, I was able to remove my
-                cardboard protection of the A/C condensor.
-            </p>
-        </div>
+        <img src="../autoProjectImages/civicEngineSwap/18blownEngineOut.jpg" alt="Blown engine, removed from Civic">
+        <p>
+            Aaaaand it's out! We struggled some, but we were able to pull both
+            the engine and transmission together. This will be useful, as I have
+            to swap over some components since the donor is from an automatic,
+            and the recipient is a manual. Also note the board assisting in holding
+            up the donor engine. I wasn't comfortable with only 4 bolts on one
+            side of the engine, so my Dad fabricated a secondary engine support.
+        </p>
+        <img src="../autoProjectImages/civicEngineSwap/19blownEngineOut.jpg" alt="">
+        <iframe width="420" height="315" src="https://youtube.com/shorts/K-CxZdj4Awc?feature=share">
+        </iframe>
+    </div>
+    <div id="swappingComponents">
+        <h3>Then the swapping begins</h3>
+        <p>
+            I minimized the accessories on the donor engine when we pulled it,
+            and some of the accessories on the recipient are in better condition.
+            So, begins the process of swapping over components.
+        </p>
+        <p>
+            !!!!!Insert video here of knock knock, looking at rod bearing assembly
+        </p>
+        <p>
+            Unfortunately, due to rain interrupting nearly every day of work,
+            I was unable to get a good number of images while I was swapping
+            over components. One thing I did notice is that the donor engine
+            had significantly less carbon buildup in the intake passages,
+            potentially indicating a lower-mileage engine from the junkyard
+            compared to the 170,000 mile engine the Civic originally had.
+        </p>
+        <img src="../autoProjectImages/civicEngineSwap/21inspectingCamCover.jpg" alt="Inspecting the cam cap">
+        <img src="../autoProjectImages/civicEngineSwap/22inspectingBell.jpg"
+            alt="Inspecting the bell housing attachment point">
+        <img src="../autoProjectImages/civicEngineSwap/23inspectingSensors.jpg"
+            alt="Inspecting the sensors on the front of the engine">
+        <p>
+            Then, once a majority of components were swapped, the oil pan was
+            on, and any sealant applied that needed to be, we mated the
+            trans and the engine for installation.
+        </p>
+        <img src="../autoProjectImages/civicEngineSwap/23-5engineTransMated.jpg" alt="Engine and Trans mated together">
+    </div>
+    <div id="installingEngine">
+        <h3>The Engine and Trans is In!</h3>
+        <p>
+            Unfortunately the installation of the engine was all hands on
+            deck, and we weren't able to capture any images of the actual
+            engine and transmission installation, but here it is!
+        </p>
+        <img src="../autoProjectImages/civicEngineSwap/24partsComingIn.jpg"
+            alt="Engine and transmission in the engine bay!">
+        <p>
+            I ran the engine for all of 10 seconds to ensure I didn't hear
+            any awful noises - But with the catalytic converter not installed,
+            the engine was quite loud and would mask many less noticeable
+            noises. It certainly sounded better than the old engine!
+        </p>
+        <img src="../autoProjectImages/civicEngineSwap/25moreComplete.jpg" alt="More parts in engine bay">
+        <p>
+            Here you can see many of the accessories have been installed,
+            including the alternator, catalytic converter, battery tray,
+            air intake, and more.
+        </p>
+        <img src="../autoProjectImages/civicEngineSwap/26radIn.jpg" alt="Radiator installed">
+        <p>
+            Then in goes the radiator, after inspecting to ensure that nothing
+            crawled in while it was out... Here is where I double checked that
+            any bolts and nuts were properly tightened and secured, as well
+            as any hoses for the cooling system, vacuum, and EGR systems.
+        </p>
+        <img src="../autoProjectImages/civicEngineSwap/27radBraceIn.jpg" alt="Installation of the radiator support">
+        <p>
+            Here is after I installed the radiator support. Not pictured is
+            all of the brackets in the rear of the engine secured, installation
+            of the power steering pump, and passenger CV axle. Since there
+            will be little risk from here on out, I was able to remove my
+            cardboard protection of the A/C condensor.
+        </p>
+    </div>
 
+    </div>
     </div>
     <!--add more pictures here-->
     <!--Tell something of a story?-->
