Making a better script for etch a sketch javascript code

--- a/programmingpages/calculator/calc.html
+++ b/programmingpages/calculator/calc.html
@@ -9,6 +9,22 @@
     <link rel="stylesheet" href='style.css'>
 </head>
 <body>
+    <header>
+        <img src="../../images/logo.png" alt="My personal logo here">
+            <!---insert stuff here -->
+        <div class="rightLinks">
+            <a href="/index.html">Home</a>
+            <a href="../progprojects.html">Programming</a>
+            <a href="https://www.theodinproject.com">The Odin Project</a>
+            <a href="https://github.com">GitHub</a>
+        </div>
+    </header>   
+    <div class="nav">
+        <p>
+            Nav Bar / Tool bar
+        </p>
+        <a href="">Insert Thing Here</a>
+    </div>
     <div id="calculator">
         <div class="display">
             <p class="previousWork"></p>
@@ -49,5 +65,9 @@
             <button id="clearButton" class="operate">Clear</button>
         </div>
     </div>
+    <footer>
+        <p>Copyright Seth 2021-2022</p>
+        <p>Unless its Copyright The Odin Project 2021-2022</p>
+    </footer>
 </body>
 </html>
