--- a/programmingpages/progprojects.html
+++ b/programmingpages/progprojects.html
@@ -60,7 +60,7 @@
                 <a href="calculator/calc.html">
                     <img class="boxed" src="images/calculator.png" alt="A 
                     Screenshot of my Calculator in Javascript">
-                    <p>A calculator <sup>in progress</sup> in vanilla Javascript</p>
+                    <p>A calculator in vanilla Javascript</p>
                 </a>
             </div>
             <div class="project">
@@ -102,7 +102,7 @@
             </div>
             <div class="project">
                 <a href="./todoList/dist/index.html">
-                    <img class="boxed" src="" alt="ToDo List">
+                    <img class="boxed" src="images/checkmark.png" alt="ToDo List">
                     <p>A ToDo List built in (Nearly) Pure Javascript, using local
                         storage and WebPack<p>
                 </a>
