--- a/subPageTemplate.html
+++ b/subPageTemplate.html
@@ -13,7 +13,7 @@
             <!---insert stuff here -->
         <div class="rightLinks">
             <a href="/index.html">Home</a>
-            <a href="../programmingpages/index.html">Programming</a>
+            <a href="../progprojects.html">Programming</a>
             <a href="https://www.theodinproject.com">The Odin Project</a>
             <a href="https://github.com">GitHub</a>
         </div>
@@ -23,7 +23,7 @@
             Nav Bar / Tool bar
         </p>
         <a href="">Insert Thing Here</a>
-        </div>
+    </div>
     <div class="cards">
         <div class="project">
             <a href="">
